# genie

ci/: run-calq-all-tests.sh
source/genie/: generation.cc
src/apps/encapsulator/: FileHandlingUtils.cc
src/apps/gabac-app/: code.cc  code.h  main.cc  program-options.cc  program-options.h
src/apps/genie/: CMakeLists.txt  exceptions.h  generation.cc  program-options.h  stream-saver.h
src/apps/local-assembly-encoder/: encoding.cc  exceptions.h  full-local-assembly-decoder.cc  full-local-assembly-decoder.h  full-local-assembly-encoder.cc  full-local-assembly-encoder.h  program-options.cc  program-options.h  read-decoder.h  read-encoder.cc  read-encoder.h  reference-encoder.cc  reference-encoder.h
src/apps/ureads-encoder/: encoding.cc  exceptions.h  fastq-file-reader.h  file-reader.h  genie-gabac-output-stream.h  input-file.h  logger.h  output-file.h  program-options.h
src/genie/: CMakeLists.txt
src/genie/core/: flowgraph-decode.cc  flowgraph-decode.h  qv-decoder.h  read-decoder.h
src/genie/module/: default-setup.cc
src/genie/quality/calq/: CMakeLists.txt  calq_coder.cc  calq_coder.h  circular_buffer.h  data-structures.h  encoder.cc  encoder.h  error_exception_reporter.h  error_reporter.h  exceptions.cc  exceptions.h  filter_buffer.cc  filter_buffer.h  genotyper.cc  genotyper.h  haplotyper.cc  haplotyper.h  helpers.cc  helpers.h  lloyd_max_quantizer.cc  lloyd_max_quantizer.h  log.cc  log.h  min-sam-record.h  probability_distribution.cc  probability_distribution.h  qual_encoder.cc  qual_encoder.h  quantizer.cc  quantizer.h  sam_pileup.cc  sam_pileup.h  sam_pileup_deque.cc  sam_pileup_deque.h  softclip_spreader.cc  softclip_spreader.h  string-helpers.h  uniform_min_max_quantizer.cc  uniform_min_max_quantizer.h  uniform_quantizer.cc  (+1 more)
src/libs/format/: fastq-importer.h  format-exporter.h  mgrecs-exporter.h  mgrecs-importer.h  sam-importer.h
src/libs/gabac/: binary-arithmetic-decoder.h  binary-arithmetic-encoder.cc  binary-arithmetic-encoder.h  reader.h  (+8 more)
test/libs/: CMakeLists.txt
(+191 files in other folders)
